// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders with different colours 1`] = `
Array [
  <title>
    Email Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`2. iconfacebook renders with different colours 1`] = `
Array [
  <title>
    Facebook Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`3. iconforwardarrow renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`4. iconstar renders with different colours 1`] = `
Array [
  <title>
    Save star
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`5. iconcopylink renders with different colours 1`] = `
Array [
  <title>
    Copy link to clipboard
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`6. iconsavebookmark renders with different colours 1`] = `
Array [
  <title>
    Save to My Articles
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`7. icontwitter renders with different colours 1`] = `
Array [
  <title>
    Twitter Icon
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`8. iconvideo renders with different colours 1`] = `
Array [
  <title>
    Video Icon
  </title>,
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`9. iconvideo360player renders with different colours 1`] = `
Array [
  <title>
    Video 360 Player Icon
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`10. thestlogo renders with different colours 1`] = `
Array [
  <title>
    ST
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`11. thetimeslogo renders with different colours 1`] = `
Array [
  <title>
    The Times
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;
